Cambios a las lecturas
Se realizan cambios en las lecturas del Ovi

--- a/CSS3.html
+++ b/CSS3.html
@@ -132,17 +132,16 @@
                         <div class="col-lg-9">
                             <div class="col-lg-12">
                                 <p>
-                                    CSS3 es la última evolución del lenguaje de las Hojas de Estilo en Cascada (Cascading Style Sheets), y pretende ampliar la versión CSS2.1. Trae consigo muchas novedades altamente esperadas , como las esquinas redondeadas, sombras, gradientes , transiciones o animaciones, y nuevos layouts como multi-columnas, cajas flexibles o maquetas de diseño en cuadrícula (grid layouts).
+                                    El CSS (Cascading Style Sheets) es un lenguaje de estilos, el cual se implementa en las páginas y aplicaciones web para su visualización y animaciones para hacer un trabajo más agradable y más amigable para la para la utilización del usuario, estos estilos van de la mano del HTML.
                                 </p>
                                 <p>
-                                    El Nivel 2 de CSS necesitó 9 años, desde Agosto de 2002 hasta Junio de 2011, para alcanzar el estado de Recomendación. Esto fué debido al hecho de que algunas características secundarias fueron retiradas de las especificaciones globales, con el fin de acelerar la normalización de las características no problemáticas, el Grupo de Trabajo CSS de la W3C, en una decisión referida como la doctrina Beijing  dividió CSS en componentes más pequeños llamados módulos cada uno de estos módulos es ahora una parte independiente del lenguaje y se dirije a la estandarización a su propio ritmo mientras algunos módulos son ya recomendados de la W3C, otros todavía son borradores iniciales tambíen se añaden nuevos módulos cuando se identifican nuevas necesidades.
+                                 CSS3 es la última evolución del lenguaje de las Hojas de Estilo en Cascada (Cascading Style Sheets), y pretende ampliar la versión CSS2.1. Trae consigo muchas novedades altamente esperadas , como las esquinas redondeadas, sombras, gradientes , transiciones o animaciones, y nuevos layouts como multi-columnas, cajas flexibles o maquetas de diseño en cuadrícula (grid layouts).
                                 </p>
-                                <img alt="Responsive image" class="img-fluid" src="Img/CSSInfo1.png">
-                                </img>
-                            </div>
-                            <button class="btn btn-primary" data-target="#ModalCSS" data-toggle="modal" type="button">
+                                <button class="btn btn-primary" data-target="#ModalCSS" data-toggle="modal" type="button">
                                 Ver mas
-                            </button>
+                               </button>    
+                           </div>
+                            <br><center><iframe width="1280" height="720" src="https://www.youtube.com/embed/gB2kwdaSUtg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center></br>
                         </div>
                     </div>
                 </div>
@@ -220,6 +219,11 @@
                 </button>
             </div>
             <div class="modal-body">
+                <p>
+                    El Nivel 2 de CSS necesitó 9 años, desde Agosto de 2002 hasta Junio de 2011, para alcanzar el estado de Recomendación. Esto fué debido al hecho de que algunas características secundarias fueron retiradas de las especificaciones globales, con el fin de acelerar la normalización de las características no problemáticas, el Grupo de Trabajo CSS de la W3C, en una decisión referida como la doctrina Beijing  dividió CSS en componentes más pequeños llamados módulos cada uno de estos módulos es ahora una parte independiente del lenguaje y se dirije a la estandarización a su propio ritmo mientras algunos módulos son ya recomendados de la W3C, otros todavía son borradores iniciales tambíen se añaden nuevos módulos cuando se identifican nuevas necesidades.
+                </p>
+                <img alt="Responsive image" class="img-fluid" src="Img/CSSInfo1.png">
+                </img>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" data-dismiss="modal" type="button">
