--- a/GIT.html
+++ b/GIT.html
@@ -133,26 +133,22 @@
                             <div class="col-lg-12">
                                 <br>
                                     <p>
+                                        Es un controlado de versiones, el cual nos permite realizar un control y un mantenimiento de las versiones de cuando se esta manejando un gran numero de archivos de código fuente, Este fue diseñado como un motor de sistema de control.</p>
+                                    <p>
                                         La principal diferencia entre Git y cualquier otro VCS (Subversion y compañía incluidos) es cómo Git modela sus datos. Conceptualmente, la mayoría de los demás sistemas almacenan la información como una lista de cambios en los archivos. Estos sistemas (CVS, Subversion, Perforce, Bazaar, etc.) modelan la información que almacenan como un conjunto de archivos y las modificaciones hechas sobre cada uno de ellos a lo largo del tiempo.
-                                    </p>
+                                    </p> 
+                                        <button class="btn btn-primary" data-target="#ModalGit" data-toggle="modal" type="button">
+                                         Ver mas
+                                        </button>
                                 </br>
-                                <center>
-                                    <img alt="Responsive image" class="img-fluid" src="Img/GitInfo1.png"/>
-                                </center>
                                 <br>
-                                <p>
-                                    Otros sistemas tienden a almacenar los datos como cambios de cada archivo respecto a una versión base.
-                                                         Git no modela ni almacena sus datos de este modo. En cambio, Git modela sus datos más como un conjunto de instantáneas de un mini sistema de archivos. Cada vez que confirmas un cambio, o guardas el estado de tu proyecto en Git, él básicamente hace una foto del aspecto de todos tus archivos en ese momento, y guarda una referencia a esa instantánea. Para ser eficiente, si los archivos no se han modificado, Git no almacena el archivo de nuevo, sólo un enlace al archivo anterior idéntico que ya tiene almacenado.
-                                </p>
-                                </br>
                                 <center>
-                                    <img alt="Responsive image" class="img-fluid" src="Img/GitInfo2.png"/>
-                                </center>
+                                	<iframe width="1280" height="720" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                </center></br>
+                                
                             </div>
 
-                            <button class="btn btn-primary" data-target="#ModalGit" data-toggle="modal" type="button">
-                                 Ver mas
-                             </button>
+                            
                         </div>
                     </div>
                 </div>
@@ -229,8 +225,24 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>
-                </p>
+                <br>
+                                    <p>
+                                        La principal diferencia entre Git y cualquier otro VCS (Subversion y compañía incluidos) es cómo Git modela sus datos. Conceptualmente, la mayoría de los demás sistemas almacenan la información como una lista de cambios en los archivos. Estos sistemas (CVS, Subversion, Perforce, Bazaar, etc.) modelan la información que almacenan como un conjunto de archivos y las modificaciones hechas sobre cada uno de ellos a lo largo del tiempo.
+                                    </p>
+                                </br>
+                                <center>
+                                    <img alt="Responsive image" class="img-fluid" src="Img/GitInfo1.png"/>
+                                </center>
+                                <br>
+                                <p>
+                                    Otros sistemas tienden a almacenar los datos como cambios de cada archivo respecto a una versión base.
+                                                         Git no modela ni almacena sus datos de este modo. En cambio, Git modela sus datos más como un conjunto de instantáneas de un mini sistema de archivos. Cada vez que confirmas un cambio, o guardas el estado de tu proyecto en Git, él básicamente hace una foto del aspecto de todos tus archivos en ese momento, y guarda una referencia a esa instantánea. Para ser eficiente, si los archivos no se han modificado, Git no almacena el archivo de nuevo, sólo un enlace al archivo anterior idéntico que ya tiene almacenado.
+                                </p>
+                                <p>Inicialmente se mostrara en el index, una parte básica del texto con un video informativo, si se quiere ver la información completa esta se mostrara en una modal, esto ayudando a economizar espacio en las secciones principales de la pagina web.</p>
+                                </br>
+                                <center>
+                                    <img alt="Responsive image" class="img-fluid" src="Img/GitInfo2.png"/>
+                                </center>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" data-dismiss="modal" type="button">
