--- a/GITHUB.html
+++ b/GITHUB.html
@@ -132,19 +132,14 @@
                         <div class="col-lg-9">
                             <div class="col-lg-12">
                                 <p>
-                                    El desarrollo de software se vuelve más fácil cuando tiene acceso a las herramientas que necesita para hacer su mejor trabajo. Con flujos de trabajo simples y coherentes, puede reducir la fatiga del cambio de contexto, agilizar los procesos de autenticación y enfocarse en los problemas que realmente importan. Para ayudarlo a obtener una experiencia de desarrollador perfecta, continuamos nuestra asociación con Microsoft para llevar Azure Pipelines a GitHub. Este nuevo servicio CI / CD le permite construir, probar e implementar continuamente en cualquier plataforma, y ​​es gratis para repositorios de código abierto.
-                                </p>
-                                <br>
-                                    <p>
-                                        Automáticamente active su canalización con cambios en su repositorio cuando conecte Azure Pipelines con GitHub. Obtenga informes de estado completos, código anotado e información detallada, todo dentro de la interfaz de GitHub.
-                                    </p>
-                                </br>
-                                <img alt="Responsive image" class="img-fluid" src="Img/GitHubInfo1.png">
-                                </img>
+                                    Es un servicio en el cual podemos mantener nuestros código seguros y tener control de versiones de estos, en el cual se pueden utilizar repositorios con nuestros proyectos, los cuales podemos compartir con compañeros de trabajo y personas que quieran ver tu código, estos repositorios pueden ser utilizados para las personas que quieren aprender sobre el desarrollo en los cuales pueden obtener información y ayudas para el desarrollo de aplicaciones.
+                                </p> 
+                                    <button class="btn btn-primary" data-target="#ModalGitHub" data-toggle="modal" type="button">
+                                       Ver mas
+                                    </button>
                             </div>
-                            <button class="btn btn-primary" data-target="#ModalGitHub" data-toggle="modal" type="button">
-                                Ver mas
-                            </button>
+
+                            <br><center><iframe width="1280" height="720" src="https://www.youtube.com/embed/KbloUomtLrE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center></br>
                         </div>
                     </div>
                 </div>
@@ -222,6 +217,14 @@
                 </button>
             </div>
             <div class="modal-body">
+            	                <p>
+                                    El desarrollo de software se vuelve más fácil cuando tiene acceso a las herramientas que necesita para hacer su mejor trabajo. Con flujos de trabajo simples y coherentes, puede reducir la fatiga del cambio de contexto, agilizar los procesos de autenticación y enfocarse en los problemas que realmente importan. Para ayudarlo a obtener una experiencia de desarrollador perfecta, continuamos nuestra asociación con Microsoft para llevar Azure Pipelines a GitHub. Este nuevo servicio CI / CD le permite construir, probar e implementar continuamente en cualquier plataforma, y ​​es gratis para repositorios de código abierto.
+                                </p>
+                                 <p>
+                                    Automáticamente active su canalización con cambios en su repositorio cuando conecte Azure Pipelines con GitHub. Obtenga informes de estado completos, código anotado e información detallada, todo dentro de la interfaz de GitHub.
+                                </p>
+                                <img alt="Responsive image" class="img-fluid" src="Img/GitHubInfo1.png">
+                                </img>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" data-dismiss="modal" type="button">
