--- a/GITPages.html
+++ b/GITPages.html
@@ -132,34 +132,14 @@
                         <div class="col-lg-9">
                             <div class="col-lg-12">
                                 <p>
-                                    GitHub Pages es un servicio de alojamiento de sitios estáticos diseñado para alojar sus páginas personales, de organización o de proyecto directamente desde un repositorio de GitHub.
-			                  Puede crear y publicar sitios de GitHub Pages en línea utilizando el Selector de temas de Jekyll . O si prefiere trabajar localmente, puede usar GitHub Desktop o la línea de comandos .
-			                  GitHub Pages es un servicio de alojamiento de sitios estáticos y no es compatible con el código del servidor, como PHP, Ruby o Python.
-			                  Para obtener más información sobre los diferentes tipos de sitios de GitHub Pages, consulte "Páginas de usuarios, organizaciones y proyectos ".
+                                    Con GitHub Pages podemos publicar nuestro sitio web sin necesidad de pagar hosting o dominio, el repositorio debe tener un nombre.github.io, una vez publicado nuestro repositorio cualquier persona podrá visitarlo sin importar el lugar y sin necesidad de tener una cuenta GitHub.
                                 </p>
-                                <p>
-                                    Los sitios de GitHub Pages están sujetos a los siguientes límites de uso:
-                                    <ul>
-                                        <li>
-                                            Los repositorios de origen de GitHub Pages tienen un límite recomendado de 1 GB .
-                                        </li>
-                                        <li>
-                                            Los sitios de GitHub Pages publicados no pueden tener más de 1 GB.
-                                        </li>
-                                        <li>
-                                            Los sitios de GitHub Pages tienen un límite de ancho de banda flexible de 100 GB por mes.
-                                        </li>
-                                        <li>
-                                            Los sitios de GitHub Pages tienen un límite suave de 10 compilaciones por hora.
-                                        </li>
-                                    </ul>
-                                </p>
-                                <img alt="Responsive image" class="img-fluid" src="Img/GitHubPages.png">
-                                </img>
-                            </div>
-                            <button class="btn btn-primary" data-target="#ModalGitPages" data-toggle="modal" type="button">
+                                <button class="btn btn-primary" data-target="#ModalGitPages" data-toggle="modal" type="button">
                                 Ver mas
-                            </button>
+                                </button>
+                            </div>
+                            <br>
+                            <center><iframe width="1280" height="720" src="https://www.youtube.com/embed/QaxgF4v4hms" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center></br>
                         </div>
                     </div>
                 </div>
@@ -237,6 +217,31 @@
                 </button>
             </div>
             <div class="modal-body">
+            	 <p>
+                              GitHub Pages es un servicio de alojamiento de sitios estáticos diseñado para alojar sus páginas personales, de organización o de proyecto directamente desde un repositorio de GitHub.
+			                  Puede crear y publicar sitios de GitHub Pages en línea utilizando el Selector de temas de Jekyll . O si prefiere trabajar localmente, puede usar GitHub Desktop o la línea de comandos .
+			                  GitHub Pages es un servicio de alojamiento de sitios estáticos y no es compatible con el código del servidor, como PHP, Ruby o Python.
+			                  Para obtener más información sobre los diferentes tipos de sitios de GitHub Pages, consulte "Páginas de usuarios, organizaciones y proyectos ".
+                                </p>
+                                <p>
+                                    Los sitios de GitHub Pages están sujetos a los siguientes límites de uso:
+                                    <ul>
+                                        <li>
+                                            Los repositorios de origen de GitHub Pages tienen un límite recomendado de 1 GB .
+                                        </li>
+                                        <li>
+                                            Los sitios de GitHub Pages publicados no pueden tener más de 1 GB.
+                                        </li>
+                                        <li>
+                                            Los sitios de GitHub Pages tienen un límite de ancho de banda flexible de 100 GB por mes.
+                                        </li>
+                                        <li>
+                                            Los sitios de GitHub Pages tienen un límite suave de 10 compilaciones por hora.
+                                        </li>
+                                    </ul>
+                                </p>
+                                <img alt="Responsive image" class="img-fluid" src="Img/GitHubPages.png">
+                                </img>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" data-dismiss="modal" type="button">
