--- a/HTML5.html
+++ b/HTML5.html
@@ -134,65 +134,43 @@
                     <div class="col-lg-9">
                         <div class="col-lg-12">
                             <p>
-                                ¿Qué es el HTML5 y para qué sirve? Es la última versión del lenguaje en el que se escriben las páginas Webs y los blogs de
-                                Blogger, un lenguaje que sólo con capaces de leer los últimos navegadores, ya que los que
-                                son más anticuados hay algunas etiquetas que no son capaces de interpretar.
-                            </p>
-                            <p>
                                 HTML5 significa HyperText Markup Language, versión 5, ¿qué es esto? Un lenguaje en el que se escriben las páginas Web, que
                                 permite hacer enlaces (hipertexto) y que es leído por los navegadores para poder mostrar
                                 la información en la pantalla de tu ordenador de una forma correcta. Por ejemplo, el lenguaje
                                 HTML5 indica al navegador cuando un texto tiene un enlace y también la dirección URL a la
                                 que tiene que dirigirse si se hace click sobre el link. Los lenguajes humanos son algo vivo
                                 que evoluciona a lo largo del tiempo y al HTML le pasa lo mismo, según ha ido evolucionando
-                                Internet se ha ido modificando. Por ello el HTML5 que es la última fase de desarrollo comparte
-                                muchas características con HTML4, pero tiene algunas cosas nuevas de gran importancia.
+                                Internet se ha ido modificando.
                             </p>
                             <p>
-                                1. HTML5 es un lenguaje más simple. Eso es bueno para los diseñadores y también para las arañas que tienen que rastrear las
-                                páginas y entenderlas. ¿Para qué sirve? El HTML 5 disminuye el tiempo de carga de tus páginas
-                                y también ayuda a bajar el ratio de texto/HTML, dos puntos que mejoran el SEO de tu blog
-                                o páginas Web.
+                               Durante el paso del tiempo HTML ha tenido una evolución a nivel de su estructura para el desarrollo de paginas web y otro aplicativos, estos cambios se ven reflejados en cambios y eliminación de algunas etiquetas.
                             </p>
                             <p>
-                                2. HTML5 es un lenguaje más semántico. En otras palabras, se dota de un significado a las diferentes partes de la páginas
-                                Web, de forma que el navegador puede distinguir la parte que forma parte de la cabecera gracias
-                                a que hay una etiqueta que dice “Cabecera”, bueno lo dice en inglés: "header". ¿Para que
-                                sirve? Ayuda a los buscadores como Google a entender tu página Web, algo que se espera sea
-                                positivo de cara al SEO, y también sirve para que los navegadores muestren de forma inteligente
-                                diferentes versiones de la páginas Web sin tener que usar plug-ins para dispositivos específicos.
+                                <b>1. article:</b> esta etiqueta sirve para definir un artículo, un comentario de usuario o una publicación independiente dentro del sitio.
                             </p>
                             <p>
-                                3. HTML5 es un lenguaje que deja desfasadas a las versiones más antiguas de los navegadores. Esto sólo sirve para dejar de
-                                lado a algunas versiones de Internet Explorer, aunque hay que decir que la última versión,
-                                IE 10 funciona muy bien con HTML5.
+                                <b>2. header, footer:</b> estas etiquetas individuales ahorran tener que insertar IDs para cada uno, como se solía hacer anteriormente. Además, se pueden insertar headers y footers para cada sección, en lugar de tener que hacerlo únicamente en general.
                             </p>
                             <p>
-                                4. HTML5 incluye más elementos gráficos y multimedia. Permite la inserción de etiquetas canvas, que sustituyen a las animaciones
-                                en Flash y también permite incluir de forma muy sencilla vídeos, música y otros elementos
-                                multimedia como por ejemplo los videojuegos. ¿Para que sirve? Para tener una página Web atractiva
-                                sin tener que complicar de forma excesiva el código HTML.
+                                <b>3. nav:</b> la negación puede ser insertada directamente en el markup, entre estas etiquetas, que nos permitirán hacer que nuestras listas oficien de navegación.
                             </p>
                             <p>
-                                5. HTML5 incluye la geolocalización. Es posible saber desde que lugar se esta visualizando un sitio Web, gracias a sistemas
-                                de referenciación como el GPS, la tecnología 3G de los dispositivos móviles o las conexiones
-                                tipo WiFi. ¿Para que sirve? Será útil para desarrollar diferentes aplicaciones y es vital
-                                por ejemplo para actividades como el e-commerce.
+                                <b>4. section:</b> con esta etiqueta, una de las más importantes de las novedades, se puede definir todo tipo de secciones dentro de un documento. Por ponerlo de forma sencilla, funciona de una forma similar a la etiqueta div que nos separa también diferentes secciones.
                             </p>
                             <p>
-                                6. HTML5 permite el uso de las Webs offline. Aunque no tengas conexión a Internet si el programador lo desea podrás ver parte
-                                o toda la página Web, e incluso interactuar con los contenidos. ¿Para qué sirve? Mejora la
-                                usabilidad de la Web. Permite al usuario trabajar con aplicaciones online desconectado, algo
-                                importante en los dispositivos móviles cuando te mueves en entornos en los que no tienes
-                                una conexión de calidad, como por ejemplo el momento en el que un autobús entra en un túnel.
+                                <b>5. audio y video:</b> estas son las dos más importantes etiquetas de HTML5, dado que nos permiten acceder de forma más simple a contenido multimedia que puede ser reproducido por casi todo tipo de dispositivos; marcan el tipo de contenido que estará en su interior.
                             </p>
-                            <center>
-                                <img alt="Responsive image" class="img-fluid" src="Img/HTMLInfo1.png" />
-                            </center>
+                            <p>
+                               <b> 6. embed:</b> con esta etiqueta se puede marcar la presencia de un contenido interactivo o aplicación externa.
+                            </p>
+                               <p>
+                                <b>7. canvas:</b> esta etiqueta nos permite introducir un “lienzo” dentro de un documento, para poder dibujar gráficos por vectores; será necesario el uso de JavaScript.
+                            </p>
                             <button class="btn btn-primary" data-target="#ModalHTML" data-toggle="modal" type="button">
                                 Ver mas
                             </button>
                         </div>
+                        <br><center></center><iframe width="1280" height="722" src="https://www.youtube.com/embed/2VKHklZl4-I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center></br>
                     </div>
                 </div>
             </div>
@@ -273,6 +251,59 @@
                 </button>
             </div>
             <div class="modal-body">
+            	            <p>
+                                ¿Qué es el HTML5 y para qué sirve? Es la última versión del lenguaje en el que se escriben las páginas Webs y los blogs de
+                                Blogger, un lenguaje que sólo con capaces de leer los últimos navegadores, ya que los que
+                                son más anticuados hay algunas etiquetas que no son capaces de interpretar.
+                            </p>
+                            <p>
+                            	HTML5 que es la última fase de desarrollo comparte muchas características con HTML4, pero tiene algunas cosas nuevas de gran importancia:
+                            </p>
+                            <center>
+                                <img alt="Responsive image" class="img-fluid" src="Img/tag-html.png" />
+                            </center>
+                            <p>
+                                <b>1.</b> HTML5 es un lenguaje más simple. Eso es bueno para los diseñadores y también para las arañas que tienen que rastrear las
+                                páginas y entenderlas. ¿Para qué sirve? El HTML 5 disminuye el tiempo de carga de tus páginas
+                                y también ayuda a bajar el ratio de texto/HTML, dos puntos que mejoran el SEO de tu blog
+                                o páginas Web.
+                            </p>
+                            <p>
+                                <b>2.</b> HTML5 es un lenguaje más semántico. En otras palabras, se dota de un significado a las diferentes partes de la páginas
+                                Web, de forma que el navegador puede distinguir la parte que forma parte de la cabecera gracias
+                                a que hay una etiqueta que dice “Cabecera”, bueno lo dice en inglés: "header". ¿Para que
+                                sirve? Ayuda a los buscadores como Google a entender tu página Web, algo que se espera sea
+                                positivo de cara al SEO, y también sirve para que los navegadores muestren de forma inteligente
+                                diferentes versiones de la páginas Web sin tener que usar plug-ins para dispositivos específicos.
+                            </p>
+                            <p>
+                                <b>3.</b> HTML5 es un lenguaje que deja desfasadas a las versiones más antiguas de los navegadores. Esto sólo sirve para dejar de
+                                lado a algunas versiones de Internet Explorer, aunque hay que decir que la última versión,
+                                IE 10 funciona muy bien con HTML5.
+                            </p>
+                            <p>
+                                <b>4.</b> HTML5 incluye más elementos gráficos y multimedia. Permite la inserción de etiquetas canvas, que sustituyen a las animaciones
+                                en Flash y también permite incluir de forma muy sencilla vídeos, música y otros elementos
+                                multimedia como por ejemplo los videojuegos. ¿Para que sirve? Para tener una página Web atractiva
+                                sin tener que complicar de forma excesiva el código HTML.
+                            </p>
+                            <p>
+                                <b>5.</b> HTML5 incluye la geolocalización. Es posible saber desde que lugar se esta visualizando un sitio Web, gracias a sistemas
+                                de referenciación como el GPS, la tecnología 3G de los dispositivos móviles o las conexiones
+                                tipo WiFi. ¿Para que sirve? Será útil para desarrollar diferentes aplicaciones y es vital
+                                por ejemplo para actividades como el e-commerce.
+                            </p>
+                            <p>
+                                <b>6.</b> HTML5 permite el uso de las Webs offline. Aunque no tengas conexión a Internet si el programador lo desea podrás ver parte
+                                o toda la página Web, e incluso interactuar con los contenidos. ¿Para qué sirve? Mejora la
+                                usabilidad de la Web. Permite al usuario trabajar con aplicaciones online desconectado, algo
+                                importante en los dispositivos móviles cuando te mueves en entornos en los que no tienes
+                                una conexión de calidad, como por ejemplo el momento en el que un autobús entra en un túnel.
+                            </p>
+                            <center>
+                                <img alt="Responsive image" class="img-fluid" src="Img/HTMLInfo1.png" />
+                            </center>
+                            
             </div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" data-dismiss="modal" type="button">
