Cambios en el Index
Relizo cambios en la presentación del index

--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
         </div>
     </div>
     <div class="banner img-1 textbanner">
+    	<div class="TitleBanner">
+    	<h1>OVI. DISEÑOS DE SITIOS WEB</h1></div>
     </div>
     <!--Esta es la sección para el Inicio-->
     <div class="container row col-lg-12">
@@ -134,6 +136,16 @@
                         </p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="banner img-2 textbanner">
+        <div class="TexBanner">
+    	<h1>Objetivos</h1></div>
+    </div>
+    <div class="container row col-lg-12">
+        <div class="col-lg-12 row subcontainer">
+            <div class="col-lg-12 row">
                 <div class="col-lg-6">
                     <div class="Encabezado col-lg-12 ">
                         <h2>
@@ -141,19 +153,22 @@
                         </h2>
                     </div>
                     <div class="col-lg-12">
+                        
+                        <h6>Objetivo General</h6>
                         <p>
-                            1. Crear un maquetado inicial, con lo conceptos básicos de HTML 5, CSS 3 y otros conceptos adicionales, que ayudaran en el
+                             Crear un maquetado inicial, con lo conceptos básicos de HTML 5, CSS 3 y otros conceptos adicionales, que ayudaran en el
                             desarrollo de la página web.
                         </p>
+                         <h6>Objetivos específicos</h6>
                         <p>
-                            2. Aprender a utilizar y manejar la estructura básica de HTML, para crear un esquema de una página web, también aprender
+                            1. Aprender a utilizar y manejar la estructura básica de HTML, para crear un esquema de una página web, también aprender
                             a utilizar bibliotecas externas como lo es Bootstrap y adaptarlo a nuestro HTML.
                         </p>
                         <p>
-                            3. Presentar los conceptos básicos de GIT, GITHUB, HTML 5 y CSS 3.
+                            2. Presentar los conceptos básicos de GIT, GITHUB, HTML 5 y CSS 3.
                         </p>
                         <p>
-                            4. Implementar efectos a las páginas web por medio del CSS, utilizado efectos hover, active, before, after, etc.
+                            3. Implementar efectos a las páginas web por medio del CSS, utilizado efectos hover, active, before, after, etc.
                         </p>
                     </div>
                 </div>
@@ -165,11 +180,21 @@
                     </div>
                     <div class="col-lg-12">
                         <p>
-                            5. Introducción, profundización e información complementaria sobre el uso de GIT y GITHUB para gestionar proyectos colaborativos
+                            Introducción, profundización e información complementaria sobre el uso de GIT y GITHUB para gestionar proyectos colaborativos
                             de diseño web, HTML5 y CSS3 para creación de contenidos en formato web (Paginas y Sitios Web)
                         </p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="banner img-2 textbanner">
+    	<div class="TexBanner">
+    	<h1>Tematica</h1></div>
+    </div>
+     <div class="container row col-lg-12">
+        <div class="col-lg-12 row subcontainer">
+            <div class="col-lg-12 row">
                 <div class="col-lg-6">
                     <div class="Encabezado col-lg-12 ">
                         <h2>
@@ -199,6 +224,8 @@
             </div>
         </div>
     </div>
+
+
     <!--Footer de la pagina-->
     <footer class="footer font-small mdb-color pt-4">
         <a href="#" id="toTop" style="display: inline;">
@@ -211,7 +238,8 @@
         	 <h6 class="text-uppercase mb-4 font-weight-bold">
                 Visitas
             </h6>
-        	<a href="http://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=44593213&digit=style/plain/1/&reloads=0"></a>
+        	<a href="http://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=44593213&digit=style/plain/1/&reloads=0"></a><a href="http://www.reliablecounter.com" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;">
+        	</a>
         </div>
         <div class="footerRedes">
 
