--- a/GITHUB.html
+++ b/GITHUB.html
@@ -139,7 +139,9 @@
                                     </button>
                             </div>
 
-                            <br><center><iframe width="1280" height="720" src="https://www.youtube.com/embed/KbloUomtLrE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center></br>
+                            <div class="col-lg-12 contenedorVideosLecturas">
+                                    <iframe style="width:100%;" height="722" src="https://www.youtube.com/embed/KbloUomtLrE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            </div>
                         </div>
                     </div>
                 </div>
