--- a/HTML5.html
+++ b/HTML5.html
@@ -170,7 +170,9 @@
                                 Ver mas
                             </button>
                         </div>
-                        <br><center></center><iframe width="1280" height="722" src="https://www.youtube.com/embed/2VKHklZl4-I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center></br>
+                        <div class="col-lg-12 contenedorVideosLecturas">
+                                <iframe style="width:100%;" height="722" src="https://www.youtube.com/embed/2VKHklZl4-I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
