Cambios al index y autores
se realizo animación sobre los botones de las herramientas.
En la pagina de autores se  ordeno lo de las visitas

--- a/Autores.html
+++ b/Autores.html
@@ -166,10 +166,12 @@
                             </p>
                         </div>
                     </div>
-                    <div class="Contador col-lg-4">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">
+                         <div class="Contador col-lg-4">
+                         <center><div class="Encabezado col-lg-9 ">
+                        <h2>
                             Visitas
-                        </h6>
+                        </h2>
+                        </div></center>
                         <a href="http://www.reliablecounter.com" target="_blank">
                             <img src="https://www.reliablecounter.com/count.php?page=44593213&digit=style/plain/1/&reloads=0">
                         </a>
