--- a/GIT.html
+++ b/GIT.html
@@ -126,7 +126,7 @@
                     </div>
                     <div class="col-lg-12 row">
                         <div class="col-lg-3 contenedorIMG">
-                            <img alt="Responsive image" data-target="#ModalGit" data-toggle="modal" src="Img/ColorGit.png">
+                            <img alt="Responsive image" data-target="#ModalGit" src="Img/ColorGit.png" title="Git.(2018). Logotipos. Recuperado de: https://git-scm.com/downloads/logos" data-toggle="tooltip">
                             </img>
                         </div>
                         <div class="col-lg-9">
